/*
Copyright © 2024 NAME HERE <EMAIL ADDRESS>
*/
syntax = "proto3";

package pbapi;

option go_package = "upms/proto/pbapi";

import "pbcommon/pbcommon.proto";


message ApiModel{
  int64 id = 1;
  string createdAt = 2;
  string updatedAt = 3;

  string type = 4;
  string path = 5;  // 请求的地址
  string method = 6;  // 请求的方法 POST  GET
  string name = 7;  // api名称
  string group = 8; // api分组名称
  bool isSelected = 9; // 当前角色是否拥有该api权限
}

message FindApiArgs{
  pbcommon.PageInfo pageInfo = 1;
  ApiModel query = 2;
}

message FindApiReply{
  pbcommon.EnumCode code = 1;
  string msg = 2;
  ApiModel data =3;
  repeated ApiModel list = 4;
  int64 total = 5;
}



message FindApiByCasbinRoleArgs{
  int64 role = 1;
}


message FindApiByCasbinRoleReply{
  pbcommon.EnumCode code = 1;
  string msg = 2;
  repeated ApiModel list = 4;
}

message SetApiByCasbinRoleArgs{
  repeated ApiModel list = 1;
  int64 role = 2;
}

service Api {
  rpc CreateApi(ApiModel) returns(pbcommon.CommonResult){}
  rpc UpdateApi(ApiModel) returns(pbcommon.CommonResult){}
  rpc DeleteApi(pbcommon.IdArgs) returns(pbcommon.CommonResult){}
  rpc FindApiById(pbcommon.IdArgs) returns(FindApiReply){}
  rpc FindApiList(FindApiArgs) returns(FindApiReply){}
  rpc FindApiByCasbinRole(FindApiByCasbinRoleArgs) returns(FindApiByCasbinRoleReply){}
  rpc SetApiByCasbinRole(SetApiByCasbinRoleArgs) returns(pbcommon.CommonResult){}
}